Fixed filter spacing

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
     <section class="portfolio">
         <div class="container">
-            <a href="project1.html" class="project-link">
-                <div class="project" data-tags="engine unity csharp">
+            <a href="project1.html" class="project-link" data-tags="engine unity csharp">
+                <div class="project">
                     <img src="4by3.png" alt="Project 1">
                     <h2>Platypus</h2>
                     <p>This is a passion project of mine. A platformer with interesting movement options.</p>
@@ -58,8 +58,8 @@
                 </div>
             </a>
 
-            <a href="project2.html" class="project-link">
-                <div class="project" data-tags="engine unity csharp cpp">
+            <a href="project2.html" class="project-link" data-tags="engine unity csharp cpp">
+                <div class="project">
                     <img src="4by3.png" alt="Project 2">
                     <h2>Maze Generator</h2>
                     <p>Unity project perfect maze generator with customizable algorithms.</p>
@@ -71,8 +71,8 @@
                 </div>
             </a>
 
-            <a href="project3.html" class="project-link">
-                <div class="project" data-tags="engine unity csharp vr">
+            <a href="project3.html" class="project-link" data-tags="engine unity csharp vr">
+                <div class="project">
                     <img src="4by3.png" alt="Project 3">
                     <h2>Kara-oké</h2>
                     <p>A VR karaoke game commissioned for AVROTROS, this was made during my internship at XR-Lab!</p>
@@ -84,8 +84,8 @@
                 </div>
             </a>
 
-            <a href="project4.html" class="project-link">
-                <div class="project" data-tags="engine unity csharp">
+            <a href="project4.html" class="project-link" data-tags="engine unity csharp">
+                <div class="project">
                     <img src="4by3.png" alt="Project 4">
                     <h2>Capture Graafsmeer</h2>
                     <p>Location-based augmented reality mobile game - Exam Unity game project</p>
@@ -96,8 +96,8 @@
                 </div>
             </a>
 
-            <a href="project5.html" class="project-link">
-                <div class="project" data-tags="engine unreal cpp">
+            <a href="project5.html" class="project-link" data-tags="engine unreal cpp">
+                <div class="project">
                     <img src="4by3.png" alt="Project 5">
                     <h2>Operation Starfall</h2>
                     <p>2.5D Metroidvania Couch Co-op based on the cartoons of 80's Sci-Fi.</p>
@@ -108,8 +108,8 @@
                 </div>
             </a>
 
-            <a href="project6.html" class="project-link">
-                <div class="project" data-tags="engine unity csharp">
+            <a href="project6.html" class="project-link" data-tags="engine unity csharp">
+                <div class="project">
                     <img src="4by3.png" alt="Project 6">
                     <h2>Smoll Knight + Horse</h2>
                     <p>Small knight Unity game - bachelor admission game</p>
@@ -120,8 +120,8 @@
                 </div>
             </a>
 
-            <a href="project7.html" class="project-link">
-                <div class="project" data-tags="lang csharp console">
+            <a href="project7.html" class="project-link" data-tags="lang csharp console">
+                <div class="project">
                     <img src="4by3.png" alt="Project 7">
                     <h2>FPS Manager</h2>
                     <p>Console app that adjusts your screen's refresh rate based on connected displays.</p>
