Added test project page (WeatherVisualizer)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bas de Reus</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="projects.css">
+    <link rel="stylesheet" href="tags.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.css">
 </head>
 <body>
     <header>
@@ -13,15 +16,14 @@
     </header>
 
     <section class="highlight-project">
-        <a href="highlight-project.html" class="highlight-container">
+        <a href="project.html" class="highlight-container">
             <img src="4by3.png" alt="Highlight Project">
             <div class="highlight-info">
-                <h2>Highlight Project</h2>
-                <p>This is an important project that showcases my best work. It demonstrates my skills and expertise in a significant way.</p>
+                <h2>Weather visualizer</h2>
+                <p>A weather visualizer with some game elements. By using a weather API.</p>
                 <div class="tags">
-                    <span class="tag tag-engine">Godot</span>
+                    <span class="tag tag-engine">Unity</span>
                     <span class="tag tag-lang">C#</span>
-                    <span class="tag tag-lang">C++</span>
                 </div>
             </div>
         </a>
@@ -45,8 +47,8 @@
     </section>
 
     <section class="portfolio">
-        <div class="container">
-            <a href="project1.html" class="project-link" data-tags="engine unity csharp">
+        <div class="project-container">
+            <a href="project.html" class="project-link" data-tags="engine unity csharp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 1">
                     <h2>Platypus</h2>
@@ -58,7 +60,7 @@
                 </div>
             </a>
 
-            <a href="project2.html" class="project-link" data-tags="engine unity csharp cpp">
+            <a href="project.html" class="project-link" data-tags="engine unity csharp cpp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 2">
                     <h2>Maze Generator</h2>
@@ -71,7 +73,7 @@
                 </div>
             </a>
 
-            <a href="project3.html" class="project-link" data-tags="engine unity csharp vr">
+            <a href="project.html" class="project-link" data-tags="engine unity csharp vr">
                 <div class="project">
                     <img src="4by3.png" alt="Project 3">
                     <h2>Kara-oké</h2>
@@ -84,7 +86,7 @@
                 </div>
             </a>
 
-            <a href="project4.html" class="project-link" data-tags="engine unity csharp">
+            <a href="project.html" class="project-link" data-tags="engine unity csharp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 4">
                     <h2>Capture Graafsmeer</h2>
@@ -96,7 +98,7 @@
                 </div>
             </a>
 
-            <a href="project5.html" class="project-link" data-tags="engine unreal cpp">
+            <a href="project.html" class="project-link" data-tags="engine unreal cpp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 5">
                     <h2>Operation Starfall</h2>
@@ -108,7 +110,7 @@
                 </div>
             </a>
 
-            <a href="project6.html" class="project-link" data-tags="engine unity csharp">
+            <a href="project.html" class="project-link" data-tags="engine unity csharp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 6">
                     <h2>Smoll Knight + Horse</h2>
@@ -120,7 +122,7 @@
                 </div>
             </a>
 
-            <a href="project7.html" class="project-link" data-tags="lang csharp console">
+            <a href="project.html" class="project-link" data-tags="lang csharp console">
                 <div class="project">
                     <img src="4by3.png" alt="Project 7">
                     <h2>FPS Manager</h2>
