Added navbar, aboutme and SRP css

--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bas de Reus</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="projects.css">
     <link rel="stylesheet" href="tags.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.css">
 </head>
 <body>
     <header>
         <h1>Portfolio: Bas de Reus</h1>
     </header>
+
+    <nav class="navbar">
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="play-games.html">Play my Games</a></li>
+        </ul>
+    </nav>
 
     <section class="highlight-project">
         <a href="project.html" class="highlight-container">
