--- a/contact.html
+++ b/contact.html
@@ -13,18 +13,13 @@
         <h1>Contact</h1>
     </header>
 
-    <nav class="navbar">
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="play-games.html">Play my Games</a></li>
-        </ul>
-    </nav>
+    <div id="navbar-placeholder"></div>
 
     
     <footer>
         <p>&copy; 2024 Bas de Reus</p>
     </footer>
+
+    <script src="FetchNavbar.js"></script>
 </body>
 </html>
