--- a/about.html
+++ b/about.html
@@ -14,14 +14,7 @@
         <h1>About</h1>
     </header>
 
-    <nav class="navbar">
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="play-games.html">Play my Games</a></li>
-        </ul>
-    </nav>
+    <div id="navbar-placeholder"></div>
 
     <div class="main-content">
         <div class="text-blocks">
@@ -61,6 +54,7 @@
         <p>&copy; 2024 Bas de Reus</p>
     </footer>
 
+    <script src="FetchNavbar.js"></script>
     <script src="DateCalculator.js"></script>
 </body>
 </html>
