--- a/index.html
+++ b/index.html
@@ -15,22 +15,16 @@
         <h1>Portfolio: Bas de Reus</h1>
     </header>
 
-    <nav class="navbar">
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="play-games.html">Play my Games</a></li>
-        </ul>
-    </nav>
+    <div id="navbar-placeholder"></div>
 
     <section class="highlight-project">
-        <a href="project.html" class="highlight-container">
+        <a href="Projects/project copy.html" class="highlight-container">
             <img src="4by3.png" alt="Highlight Project">
             <div class="highlight-info">
                 <h2>Weather visualizer</h2>
-                <p>A weather visualizer with some game elements. By using a weather API.</p>
+                <p>A weather visualizer with some game elements. By using a weather API. Big bla bla you see here. The weather could be nice..... or not.</p>
                 <div class="tags">
+                    <span class="tag tag-new">New</span>
                     <span class="tag tag-engine">Unity</span>
                     <span class="tag tag-lang">C#</span>
                 </div>
@@ -42,22 +36,25 @@
         <label for="tag-filter">Filter by:</label>
         <select id="tag-filter">
             <option value="all">All</option>
+            <option value="new">New</option>
             <option value="engine">Game Engines</option>
-            <option value="lang">Programming Languages</option>
+            <option value="lang">Pure code (with framework)</option>
             <option value="unity">Unity</option>
-            <option value="unreal">Unreal</option>
-            <option value="godot">Godot</option>
+            <!-- <option value="unreal">Unreal</option> -->
+            <!-- <option value="godot">Godot</option> -->
             <option value="csharp">C#</option>
             <option value="cpp">C++</option>
-            <option value="htmlcssjs">HTML/CSS/JS</option>
-            <option value="vr">VR</option>
+            <!-- <option value="htmlcssjs">HTML/CSS/JS</option> -->
+            <option value="xr">XR</option>
             <option value="console">Console</option>
+            <option value="internship">Internship</option>
+            <option value="gamejam">Game jam</option>
         </select>
     </section>
 
     <section class="portfolio">
         <div class="project-container">
-            <a href="project.html" class="project-link" data-tags="engine unity csharp">
+            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 1">
                     <h2>Platypus</h2>
@@ -69,7 +66,7 @@
                 </div>
             </a>
 
-            <a href="project.html" class="project-link" data-tags="engine unity csharp cpp">
+            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 2">
                     <h2>Maze Generator</h2>
@@ -77,12 +74,11 @@
                     <div class="tags">
                         <span class="tag tag-engine">Unity</span>
                         <span class="tag tag-lang">C#</span>
-                        <span class="tag tag-lang">C++</span>
                     </div>
                 </div>
             </a>
 
-            <a href="project.html" class="project-link" data-tags="engine unity csharp vr">
+            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp xr internship">
                 <div class="project">
                     <img src="4by3.png" alt="Project 3">
                     <h2>Kara-oké</h2>
@@ -90,40 +86,42 @@
                     <div class="tags">
                         <span class="tag tag-engine">Unity</span>
                         <span class="tag tag-lang">C#</span>
-                        <span class="tag">VR</span>
+                        <span class="tag">XR</span>
+                        <span class="tag">Internship</span>
                     </div>
                 </div>
             </a>
 
-            <a href="project.html" class="project-link" data-tags="engine unity csharp">
+            <a href="Projects/project.html" class="project-link" data-tags="new engine unity csharp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 4">
                     <h2>Capture Graafsmeer</h2>
-                    <p>Location-based augmented reality mobile game - Exam Unity game project</p>
+                    <p>Location-based augmented reality mobile game<br>Exam Unity game project</p>
                     <div class="tags">
+                        <span class="tag tag-new">New</span>
                         <span class="tag tag-engine">Unity</span>
                         <span class="tag tag-lang">C#</span>
                     </div>
                 </div>
             </a>
 
-            <a href="project.html" class="project-link" data-tags="engine unreal cpp">
+            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 5">
                     <h2>Operation Starfall</h2>
                     <p>2.5D Metroidvania Couch Co-op based on the cartoons of 80's Sci-Fi.</p>
                     <div class="tags">
-                        <span class="tag tag-engine">Unreal</span>
-                        <span class="tag tag-lang">C++</span>
+                        <span class="tag tag-engine">Unity</span>
+                        <span class="tag tag-lang">C#</span>
                     </div>
                 </div>
             </a>
 
-            <a href="project.html" class="project-link" data-tags="engine unity csharp">
+            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 6">
                     <h2>Smoll Knight + Horse</h2>
-                    <p>Small knight Unity game - bachelor admission game</p>
+                    <p>A bachelor admission game. With a medieval setting to play Jousting.</p>
                     <div class="tags">
                         <span class="tag tag-engine">Unity</span>
                         <span class="tag tag-lang">C#</span>
@@ -131,14 +129,92 @@
                 </div>
             </a>
 
-            <a href="project.html" class="project-link" data-tags="lang csharp console">
+            <a href="Projects/project.html" class="project-link" data-tags="new lang csharp console">
                 <div class="project">
                     <img src="4by3.png" alt="Project 7">
                     <h2>FPS Manager</h2>
                     <p>Console app that adjusts your screen's refresh rate based on connected displays.</p>
                     <div class="tags">
+                        <span class="tag tag-new">New</span>
                         <span class="tag tag-lang">C#</span>
                         <span class="tag">Console</span>
+                    </div>
+                </div>
+            </a>
+
+            <a href="Projects/project.html" class="project-link" data-tags="lang cpp console">
+                <div class="project">
+                    <img src="4by3.png" alt="Project 8">
+                    <h2>Tic tac toe</h2>
+                    <p>A console app where you can play tic-tac-toe with somelse or with the computer.</p>
+                    <div class="tags">
+                        <span class="tag tag-lang">C++</span>
+                        <span class="tag">Console</span>
+                    </div>
+                </div>
+            </a>
+
+            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp gamejam">
+                <div class="project">
+                    <img src="4by3.png" alt="Project 9">
+                    <h2>The Lost Reel</h2>
+                    <p>This is a horro game made for the gamejam "Wanna Jam? 2023". Monster AI with a statemachine.</p>
+                    <div class="tags">
+                        <span class="tag tag-engine">Unity</span>
+                        <span class="tag tag-lang">C#</span>
+                        <span class="tag">Game jam</span>
+                    </div>
+                </div>
+            </a>
+
+            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp gamejam">
+                <div class="project">
+                    <img src="4by3.png" alt="Project 10">
+                    <h2>Inner thoughts</h2>
+                    <p>It is a 2D pixel rogue-like, destroying all the eyes that have infiltrated your mind.</p>
+                    <div class="tags">
+                        <span class="tag tag-engine">Unity</span>
+                        <span class="tag tag-lang">C#</span>
+                        <span class="tag">Game jam</span>
+                    </div>
+                </div>
+            </a>
+
+            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp gamejam">
+                <div class="project">
+                    <img src="4by3.png" alt="Project 11">
+                    <h2>Mecco the Chameleon</h2>
+                    <p>Mecco is learning how colors work, so Mecco covers herself in baths with paint to combine the colors.</p>
+                    <div class="tags">
+                        <span class="tag tag-engine">Unity</span>
+                        <span class="tag tag-lang">C#</span>
+                        <span class="tag">Game jam</span>
+                    </div>
+                </div>
+            </a>
+
+            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp xr internship">
+                <div class="project">
+                    <img src="4by3.png" alt="Project 12">
+                    <h2>AR Gpal</h2>
+                    <p>We were commissioned to translate GPal's existing app/webapp into an AR environment.</p>
+                    <div class="tags">
+                        <span class="tag tag-engine">Unity</span>
+                        <span class="tag tag-lang">C#</span>
+                        <span class="tag">XR</span>
+                        <span class="tag">Internship</span>
+                    </div>
+                </div>
+            </a>
+
+            <a href="Projects/project.html" class="project-link" data-tags="lang cpp internship">
+                <div class="project">
+                    <img src="4by3.png" alt="Project 13">
+                    <h2>InControl</h2>
+                    <p>InControl is a simulation company that makes and provide simulation in logistics and pedstrain.</p>
+                    <div class="tags">
+                        <span class="tag tag-lang">C++</span>
+                        <span class="tag">Internship</span>
                     </div>
                 </div>
             </a>
@@ -149,6 +225,7 @@
         <p>&copy; 2024 Bas de Reus</p>
     </footer>
 
+    <script src="FetchNavbar.js"></script>
     <script src="TagFilter.js"></script>
 </body>
 </html>
