--- a/Projects/project.html
+++ b/Projects/project.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bas de Reus</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/navbar.css">
-    <link rel="stylesheet" href="projectpage.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../navbar.css">
+    <link rel="stylesheet" href="../Projects/projectpage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.css">
 </head>
 <body>
@@ -91,7 +91,7 @@
         <p>&copy; 2024 Bas de Reus</p>
     </footer>
 
-    <script src="/FetchNavbar.js"></script>
+    <script src="../FetchNavbar.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 </body>
