--- a/play-games.html
+++ b/play-games.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bas de Reus</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../navbar.css">
 </head>
 <body>
     <header>
@@ -20,6 +20,6 @@
         <p>&copy; 2024 Bas de Reus</p>
     </footer>
 
-    <script src="FetchNavbar.js"></script>
+    <script src="../FetchNavbar.js"></script>
 </body>
 </html>
