--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bas de Reus - About</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../navbar.css">
-    <link rel="stylesheet" href="../about.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
     <header>
@@ -54,7 +54,7 @@
         <p>&copy; 2024 Bas de Reus</p>
     </footer>
 
-    <script src="../FetchNavbar.js"></script>
-    <script src="../DateCalculator.js"></script>
+    <script src="FetchNavbar.js"></script>
+    <script src="DateCalculator.js"></script>
 </body>
 </html>
