--- a/Projects/project.html
+++ b/Projects/project.html
@@ -7,7 +7,7 @@
     <title>Bas de Reus</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../navbar.css">
-    <link rel="stylesheet" href="../Projects/projectpage.css">
+    <link rel="stylesheet" href="projectpage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.css">
 </head>
 <body>
