--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bas de Reus</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../navbar.css">
-    <link rel="stylesheet" href="../projects.css">
-    <link rel="stylesheet" href="../tags.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="projects.css">
+    <link rel="stylesheet" href="tags.css">
 </head>
 <body>
     <header>
@@ -225,7 +225,7 @@
         <p>&copy; 2024 Bas de Reus</p>
     </footer>
 
-    <script src="../FetchNavbar.js"></script>
-    <script src="../TagFilter.js"></script>
+    <script src="FetchNavbar.js"></script>
+    <script src="TagFilter.js"></script>
 </body>
 </html>
