--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,33 @@
         <h1>Contact</h1>
     </header>
 
-    <div id="navbar-placeholder"></div>
-
+    <nav class="navbar">
+        <ul class="nav-links">
+            <li><a href="/">Home</a></li>
+            <li><a href="/about.html">About Me</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/play-games.html">Play my Games</a></li>
+    
+            <li class="dropdown">
+                <a href="#">Projects</a>
+                <ul class="dropdown-content">
+                    <li><a href="Projects/project.html">Platypus</a></li>
+                    <li><a href="Projects/project.html">Maze Generator</a></li>
+                    <li><a href="Projects/project.html">Kara-oké</a></li>
+                    <li><a href="Projects/project.html">Capture Graafsmeer</a></li>
+                    <li><a href="Projects/project.html">Operation Starfall</a></li>
+                    <li><a href="Projects/project.html">Smoll Knight + Horse</a></li>
+                    <li><a href="Projects/project.html">FPS Manager</a></li>
+                    <li><a href="Projects/project.html">Tic tac toe</a></li>
+                    <li><a href="Projects/project.html">The Lost Reel</a></li>
+                    <li><a href="Projects/project.html">Inner thoughts</a></li>
+                    <li><a href="Projects/project.html">Mecco the Chameleon</a></li>
+                    <li><a href="Projects/project.html">AR Gpal</a></li>
+                    <li><a href="Projects/project.html">InControl</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
     
     <footer>
         <p>&copy; 2024 Bas de Reus</p>
