Added 404 page and .htaccess

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bas de Reus - About</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="about.css">
 </head>
@@ -32,7 +32,7 @@
                 <h2>Why I Make Games</h2>
                 <p>I like to make games because I want to be able to give the enjoyment that games gave me to others.<br>
                     This is why I am a game developer. I do like to work on gameplay features and systems.<br>
-                    I have the most experience with Unity and C#, which can be found on the <a href="index.html" class="link">home page</a>.<br>
+                    I have the most experience with Unity and C#, which can be found on the <a href="index" class="link">home page</a>.<br>
                     What I also like to do is take the lead in projects. I have often done this in the role of lead developer or scrum master.</p>
             </section>
             
@@ -50,11 +50,9 @@
         <img src="MijnFoto.jpg" alt="Photo of me" class="profile-photo">
     </div>
 
-    <footer>
-        <p>&copy; 2024 Bas de Reus</p>
-    </footer>
+    <div id="footer-placeholder"></div>
 
-    <script src="FetchNavbar.js"></script>
+    <script src="HtmlFetcher.js"></script>
     <script src="DateCalculator.js"></script>
 </body>
 </html>
