--- a/Projects/project.html
+++ b/Projects/project.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bas de Reus</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../base.css">
     <link rel="stylesheet" href="../navbar.css">
     <link rel="stylesheet" href="projectpage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.css">
@@ -87,11 +87,9 @@
         </div>
     </div>
 
-    <footer>
-        <p>&copy; 2024 Bas de Reus</p>
-    </footer>
+    <div id="footer-placeholder"></div>
 
-    <script src="../FetchNavbar.js"></script>
+    <script src="../HtmlFetcher.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 </body>
