--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bas de Reus</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="projects.css">
     <link rel="stylesheet" href="tags.css">
@@ -18,7 +18,7 @@
     <div id="navbar-placeholder"></div>
 
     <section class="highlight-project">
-        <a href="Projects/project copy.html" class="highlight-container">
+        <a href="Projects/project copy" class="highlight-container">
             <img src="4by3.png" alt="Highlight Project">
             <div class="highlight-info">
                 <h2>Weather visualizer</h2>
@@ -54,7 +54,7 @@
 
     <section class="portfolio">
         <div class="project-container">
-            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp">
+            <a href="Projects/project" class="project-link" data-tags="engine unity csharp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 1">
                     <h2>Platypus</h2>
@@ -66,7 +66,7 @@
                 </div>
             </a>
 
-            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp">
+            <a href="Projects/project" class="project-link" data-tags="engine unity csharp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 2">
                     <h2>Maze Generator</h2>
@@ -78,7 +78,7 @@
                 </div>
             </a>
 
-            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp xr internship">
+            <a href="Projects/project" class="project-link" data-tags="engine unity csharp xr internship">
                 <div class="project">
                     <img src="4by3.png" alt="Project 3">
                     <h2>Kara-oké</h2>
@@ -92,7 +92,7 @@
                 </div>
             </a>
 
-            <a href="Projects/project.html" class="project-link" data-tags="new engine unity csharp">
+            <a href="Projects/project" class="project-link" data-tags="new engine unity csharp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 4">
                     <h2>Capture Graafsmeer</h2>
@@ -105,7 +105,7 @@
                 </div>
             </a>
 
-            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp">
+            <a href="Projects/project" class="project-link" data-tags="engine unity csharp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 5">
                     <h2>Operation Starfall</h2>
@@ -117,7 +117,7 @@
                 </div>
             </a>
 
-            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp">
+            <a href="Projects/project" class="project-link" data-tags="engine unity csharp">
                 <div class="project">
                     <img src="4by3.png" alt="Project 6">
                     <h2>Smoll Knight + Horse</h2>
@@ -129,7 +129,7 @@
                 </div>
             </a>
 
-            <a href="Projects/project.html" class="project-link" data-tags="new lang csharp console">
+            <a href="Projects/project" class="project-link" data-tags="new lang csharp console">
                 <div class="project">
                     <img src="4by3.png" alt="Project 7">
                     <h2>FPS Manager</h2>
@@ -142,7 +142,7 @@
                 </div>
             </a>
 
-            <a href="Projects/project.html" class="project-link" data-tags="lang cpp console">
+            <a href="Projects/project" class="project-link" data-tags="lang cpp console">
                 <div class="project">
                     <img src="4by3.png" alt="Project 8">
                     <h2>Tic tac toe</h2>
@@ -154,7 +154,7 @@
                 </div>
             </a>
 
-            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp gamejam">
+            <a href="Projects/project" class="project-link" data-tags="engine unity csharp gamejam">
                 <div class="project">
                     <img src="4by3.png" alt="Project 9">
                     <h2>The Lost Reel</h2>
@@ -167,7 +167,7 @@
                 </div>
             </a>
 
-            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp gamejam">
+            <a href="Projects/project" class="project-link" data-tags="engine unity csharp gamejam">
                 <div class="project">
                     <img src="4by3.png" alt="Project 10">
                     <h2>Inner thoughts</h2>
@@ -180,7 +180,7 @@
                 </div>
             </a>
 
-            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp gamejam">
+            <a href="Projects/project" class="project-link" data-tags="engine unity csharp gamejam">
                 <div class="project">
                     <img src="4by3.png" alt="Project 11">
                     <h2>Mecco the Chameleon</h2>
@@ -193,7 +193,7 @@
                 </div>
             </a>
 
-            <a href="Projects/project.html" class="project-link" data-tags="engine unity csharp xr internship">
+            <a href="Projects/project" class="project-link" data-tags="engine unity csharp xr internship">
                 <div class="project">
                     <img src="4by3.png" alt="Project 12">
                     <h2>AR Gpal</h2>
@@ -207,7 +207,7 @@
                 </div>
             </a>
 
-            <a href="Projects/project.html" class="project-link" data-tags="lang cpp internship">
+            <a href="Projects/project" class="project-link" data-tags="lang cpp internship">
                 <div class="project">
                     <img src="4by3.png" alt="Project 13">
                     <h2>InControl</h2>
@@ -221,11 +221,9 @@
         </div>
     </section>
 
-    <footer>
-        <p>&copy; 2024 Bas de Reus</p>
-    </footer>
+    <div id="footer-placeholder"></div>
 
-    <script src="FetchNavbar.js"></script>
+    <script src="HtmlFetcher.js"></script>
     <script src="TagFilter.js"></script>
 </body>
 </html>
