--- a/navbar.html
+++ b/navbar.html
@@ -2,26 +2,27 @@
 <nav class="navbar">
     <ul class="nav-links">
         <li><a href="/">Home</a></li>
-        <li><a href="/about.html">About Me</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-        <li><a href="/play-games.html">Play my Games</a></li>
+        <li><a href="/about">About Me</a></li>
+        <li><a href="/contact">Contact</a></li>
+        <li><a href="/play-games">Play my Games</a></li>
 
         <li class="dropdown">
             <a href="#">Projects</a>
             <ul class="dropdown-content">
-                <li><a href="Projects/project.html">Platypus</a></li>
-                <li><a href="Projects/project.html">Maze Generator</a></li>
-                <li><a href="Projects/project.html">Kara-oké</a></li>
-                <li><a href="Projects/project.html">Capture Graafsmeer</a></li>
-                <li><a href="Projects/project.html">Operation Starfall</a></li>
-                <li><a href="Projects/project.html">Smoll Knight + Horse</a></li>
-                <li><a href="Projects/project.html">FPS Manager</a></li>
-                <li><a href="Projects/project.html">Tic tac toe</a></li>
-                <li><a href="Projects/project.html">The Lost Reel</a></li>
-                <li><a href="Projects/project.html">Inner thoughts</a></li>
-                <li><a href="Projects/project.html">Mecco the Chameleon</a></li>
-                <li><a href="Projects/project.html">AR Gpal</a></li>
-                <li><a href="Projects/project.html">InControl</a></li>
+                <li><a href="../Projects/project copy">Weather Visualizer</a></li>
+                <li><a href="../Projects/project">Platypus</a></li>
+                <li><a href="../Projects/project">Maze Generator</a></li>
+                <li><a href="../Projects/project">Kara-oké</a></li>
+                <li><a href="../Projects/project">Capture Graafsmeer</a></li>
+                <li><a href="../Projects/project">Operation Starfall</a></li>
+                <li><a href="../Projects/project">Smoll Knight + Horse</a></li>
+                <li><a href="../Projects/project">FPS Manager</a></li>
+                <li><a href="../Projects/project">Tic tac toe</a></li>
+                <li><a href="../Projects/project">The Lost Reel</a></li>
+                <li><a href="../Projects/project">Inner thoughts</a></li>
+                <li><a href="../Projects/project">Mecco the Chameleon</a></li>
+                <li><a href="../Projects/project">AR Gpal</a></li>
+                <li><a href="../Projects/project">InControl</a></li>
             </ul>
         </li>
     </ul>
