--- a/play-games.html
+++ b/play-games.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bas de Reus</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
@@ -15,10 +15,8 @@
 
     <div id="navbar-placeholder"></div>
     
-    <footer>
-        <p>&copy; 2024 Bas de Reus</p>
-    </footer>
+    <div id="footer-placeholder"></div>
 
-    <script src="FetchNavbar.js"></script>
+    <script src="HtmlFetcher.js"></script>
 </body>
 </html>
