--- a/404.html
+++ b/404.html
@@ -6,6 +6,9 @@
     <title>404 Not Found</title>
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="404.css">
+    <link rel="stylesheet" href="../base.css">
+    <link rel="stylesheet" href="../404.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
