--- a/Projects/project.html
+++ b/Projects/project.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../navbar.css">
     <link rel="stylesheet" href="projectpage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
