--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bas de Reus</title>
+    <title>Bas de Reus - Contact</title>
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -14,7 +16,52 @@
     </header>
 
     <div id="navbar-placeholder"></div>
-    
+
+    <main>
+        <section class="contact-section">
+            <h2>Get in Touch</h2><br>
+            <ul class="contact-list">
+                <li>
+                    <i class="fas fa-file-alt"></i> 
+                    <strong>CV: </strong> 
+                    <a href="CV - English.pdf" download> Download CV ENG</a>
+                    <span style="margin-left: 5px;">|</span>
+                    <a href="CV.pdf" download> Download CV NL</a>
+                </li>
+                <li>
+                    <i class="fas fa-envelope"></i> 
+                    <strong>Email: </strong> 
+                    <a href="mailto:bas@example.com">dereusbas461@gmail.com</a>
+                </li>
+                <li>
+                    <i class="fab fa-linkedin"></i> 
+                    <strong>Linkedin: </strong> 
+                    <a href="https://www.linkedin.com/in/bas-de-reus">linkedin.com/in/bas-de-reus</a>
+                </li>
+                <li>
+                    <i class="fab fa-github"></i> 
+                    <strong>GitHub: </strong> 
+                    <a href="https://github.com/bas-boop" target="_blank">github.com/bas-boop</a>
+                </li>
+                <li>
+                    <i class="fab fa-itch-io"></i> 
+                    <strong>Itch.io: </strong> 
+                    <a href="https://baz-geluk9.itch.io" target="_blank">baz-geluk9.itch.io</a>
+                </li>
+                <li>
+                    <i class="fab fa-artstation"></i> 
+                    <strong>ArtStation: </strong> 
+                    <a href="https://www.artstation.com/baz_geluk9" target="_blank">artstation.com/baz_geluk9</a>
+                </li>
+                <li>
+                    <i class="fab fa-discord"></i> 
+                    <strong style="margin-right: 5px;">Discord: </strong> 
+                    <p>baz_geluk9</p>
+                </li>   
+            </ul>
+        </section>
+    </main>
+
     <div id="footer-placeholder"></div>
 
     <script src="HtmlFetcher.js"></script>
