--- a/navbar.html
+++ b/navbar.html
@@ -4,7 +4,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/about">About Me</a></li>
         <li><a href="/contact">Contact</a></li>
-        <li><a href="/play-games">Play my Games</a></li>
+        <!-- <li><a href="/play-games">Play my Games</a></li> -->
 
         <li class="dropdown">
             <a href="#">Projects</a>
