--- a/play-games.html
+++ b/play-games.html
@@ -7,6 +7,7 @@
     <title>Bas de Reus</title>
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
