More responsive highlighted project and code blocks

--- a/Projects/project.html
+++ b/Projects/project.html
@@ -24,6 +24,7 @@
             <p>This code snippet demonstrates how to update various UI elements with weather data. It takes in a <highlight-text>WeatherResponse</highlight-text> object and sets the text of different UI components based on the weather data received. The method updates temperature, cloud coverage, wind speed, degree, humidity, pressure, and visibility in the user interface.</p>
         </div>
 
+        <!-- will not shrink when narrow screen -->
         <div class="code">
             <pre><code class="language-cs" style="max-width: 960px;">private void UpdateUiWithData(WeatherResponse weatherData)
 {
@@ -63,6 +64,7 @@
         </div>
 
         <div class="code-container">
+            <!-- will not shrink when narrow screen -->
             <div class="code">
                 <pre><code class="language-cs" style="max-width: 960px;">public static string LoadApiKey()
 {
