--- a/index.html
+++ b/index.html
@@ -22,18 +22,12 @@
         <a href="Projects/project copy" class="highlight-container">
             <img src="4by3.png" alt="Highlight Project">
             <div class="highlight-info">
-                <h2>Gokken de game</h2>
-                <p>ja nee gewoon goede game om geld in te stoppen</p>
+                <h2>Wheater visualizer</h2>
+                <p>A weather visualizer with some game elements. By using a weather API. Big bla bla you see here. The weather could be nice..... or not.</p>
                 <div class="tags">
                     <span class="tag tag-new">New</span>
                     <span class="tag tag-engine">Unity</span>
-                    <span class="tag tag-engine">Roblox</span>
                     <span class="tag tag-lang">C#</span>
-                    <span class="tag tag-lang">C++</span>
-                    <span class="tag tag-lang">Python</span>
-                    <span class="tag tag-lang">Lua</span>
-                    <span class="tag">VR</span>
-                    <span class="tag">Money</span>
                 </div>
             </div>
         </a>
